# data_capture_template

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: data_model.rs  handler.rs  main.rs  parse.rs  traits.rs
src/handlers/: example_handler.rs  mod.rs
src/models/: impls.rs  mod.rs
